<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#dedede">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:fitsSystemWindows="true">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:contentScrim="@color/colorPrimary"
            app:expandedTitleMarginEnd="64dp"
            app:expandedTitleMarginStart="48dp"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/tb_main"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:elevation="0dp"
                android:minHeight="?attr/actionBarSize"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark" />

            <ImageView
                android:id="@+id/img_zika"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/zika"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:paddingBottom="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/tv_zika"
                style="@style/title_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_oque_e_zika" />

            <TextView
                android:id="@+id/tv_zika_content"
                style="@style/content_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_oque_e_zika" />

            <TextView
                style="@style/title_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_quais_sao_os_sintomas_zika" />

            <TextView
                style="@style/content_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_quais_sao_os_sintomas_zika" />

            <TextView
                style="@style/title_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/p_como_e_o_tratamento_zika" />

            <TextView
                style="@style/last_content_fragment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/r_como_e_o_tratamento_zika" />
        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>